--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 <body style="text-align: center;font-size: xx-large;padding-top: 100px">
   <h1>REGEX TESTER</h1>
   <h6>COMMING SOON...</h6>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-90206021-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 
 </html>
