--- a/index.html
+++ b/index.html
@@ -1,29 +1,21 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-  <base href="/" />
-  <title>Regular Expression Tester</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Regular Expression Tester" />
-  <meta name="keywords" content="regex, regular expression, tester" />
+    <meta charset="utf-8">
+    <title>Regular Expression Tester</title>
+    <base href="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Regular Expression Tester">
+    <meta name="keywords" content="regex tester, regex, regular expression">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 
-<body style="text-align: center;font-size: xx-large;padding-top: 100px">
-  <h1>REGEX TESTER</h1>
-  <h6>COMMING SOON...</h6>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-90206021-2', 'auto');
-  ga('send', 'pageview');
-
-</script>
-</body>
+<body class="bg-lightgrey">
+    <div class="container margin-top">
+        <app-root></app-root>
+    </div>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="scripts.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 
 </html>
