--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <meta name="description" content="Regular Expression Tester">
     <meta name="keywords" content="regex tester, regex, regular expression">
     <link rel="icon" type="image/x-icon" href="favicon.png">
+    <script>
+      (function(){
+        var redirect = sessionStorage.redirect;
+        delete sessionStorage.redirect;
+        if (redirect && redirect != location.href) {
+          history.replaceState(null, null, redirect);
+        }
+      })();
+    </script>
 </head>
 
 <body class="bg-lightgrey">
