Build 60f179d715ab1c18de60303382bbebdcffdf2ec7

--- a/404.html
+++ b/404.html
@@ -1,25 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <title>Regular Expression Tester</title>
-    <base href="/">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Regular Expression Tester">
-    <meta name="keywords" content="regex tester, regex, regular expression">
-    <link rel="icon" type="image/x-icon" href="favicon.png">
-</head>
-
-<body class="bg-lightgrey">
-    <div class="container margin-top">
-        <app-root></app-root>
-    </div>
-
-    <!-- Global Site Tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90206021-2"></script>
-    <script async src="google-analytics.js"></script>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="scripts.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Regular Expression Tester</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="description" content="Regular Expression Tester"><meta name="keywords" content="regex tester, regex, regular expression"><link rel="icon" type="image/x-icon" href="favicon.png"><link href="styles.4ed5189cec602d07a1d2.bundle.css" rel="stylesheet"/></head><body class="bg-lightgrey"><div class="container margin-top"><app-root></app-root></div><!-- Global Site Tag (gtag.js) - Google Analytics --><script async src="https://www.googletagmanager.com/gtag/js?id=UA-90206021-2"></script><script async src="google-analytics.js"></script><script type="text/javascript" src="inline.989dbb52e022eb48ee21.bundle.js"></script><script type="text/javascript" src="polyfills.8eba0ab53b5457105d75.bundle.js"></script><script type="text/javascript" src="scripts.b2634d8317707347addd.bundle.js"></script><script type="text/javascript" src="vendor.991d9287b6dae46986a3.bundle.js"></script><script type="text/javascript" src="main.57b482a32f9b0d2659a2.bundle.js"></script></body></html>
