* Upgraded API to .Net Core 3.1 * Upgraded UI to angular 10 * Switch hosting from now.sh to heroku.

--- a/404.html
+++ b/404.html
@@ -1,3 +1,31 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Regular Expression Tester</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="description" content="Regular Expression Tester for .Net, Python, Java and JavaScript"><meta name="keywords" content="regex tester, regex, regular expression"><link rel="icon" type="image/x-icon" href="favicon.png"><meta property="og:title" content="Regular Expresstion Tester"/><meta property="og:image" content="/assets/img/logo-facebook.png"/><script async src="https://www.googletagmanager.com/gtag/js?id=UA-90206021-2"></script><script>window.dataLayer = window.dataLayer || [];
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>Regular Expression Tester</title>
+    <base href="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Regular Expression Tester for .Net, Python, Java and JavaScript">
+    <meta name="keywords" content="regex tester, regex, regular expression">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+
+    <meta property="og:title" content="Regular Expresstion Tester" />
+    <meta property="og:image" content="/assets/img/logo-facebook.png" />
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90206021-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());</script><link href="styles.2c30453d04e6ad70eed5.bundle.css" rel="stylesheet"/></head><body class="bg-lightgrey"><div class="container margin-top"><app-root></app-root></div><script type="text/javascript" src="inline.31e1fb380eb7cf3d75b1.bundle.js"></script><script type="text/javascript" src="polyfills.b4bae6cdfd14d976a9ae.bundle.js"></script><script type="text/javascript" src="scripts.49ab6863117121880838.bundle.js"></script><script type="text/javascript" src="vendor.85fe22a7d582e0d03ec1.bundle.js"></script><script type="text/javascript" src="main.1eb50f6a0680e6054f3b.bundle.js"></script></body></html>
+      gtag('js', new Date());
+    </script>
+<link rel="stylesheet" href="styles.eb6bb7ac970cd9a09049.css"></head>
+
+<body class="bg-lightgrey">
+    <div class="container margin-top">
+        <app-root></app-root>
+    </div>
+<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.a4021de53358bb0fec14.js" defer></script><script src="scripts.70575a92e96be75efb2f.js" defer></script><script src="main.b284fe92b443f0b13488.js" defer></script></body>
+
+</html>
